--- a/static/media.css
+++ b/static/media.css
@@ -99,7 +99,7 @@
         transform: translateY(80px);
         transform: translateX(0px);
         z-index: 9999999;
-        margin-top: 0px;
+        padding-top: 40px;
         margin-left: 0%;
         margin-bottom: 0;
 
