--- a/website1/templates/pt copy 2.html
+++ b/website1/templates/pt copy 2.html
@@ -99,7 +99,7 @@
                             <img src="{% static 'img/jackpot.png' %}" alt="" srcset="">
                         </div>
                     </div>
-                    <div class="step">Caça Níqueis
+                    <div class="step">Caça LKMAD
                         <div class="circle">
                             <img src="{% static 'img/slots.png' %}" alt="" srcset="">
                         </div>
