--- a/website1/templates/web.html
+++ b/website1/templates/web.html
@@ -11,24 +11,11 @@
 </head>
 
 <body>
-    <div class="espaco-mobile">
-        <img src="{% static 'img/mobile2.png' %}" alt="mobile-promo">
-        <div>
-            <center>
-                <div class="button">
-                    <a href="https://mnr-ircp01.com/c73471629">Registrar-se</a>
-                </div>
-            </center>
-        </div>
-    </div>
-
-
-
     </div>
 
     <div class="painel">
         <video autoplay muted loop poster="{% static 'img/poster.png' %}">
-            <source src="https://play.spincasino.com/spc/content/shared/videos/wave/wolf_blaze_wowpot/desktop.mp4" type="video/webm">
+            <source src="" type="video/webm">
             Seu navegador não suporta vídeos.
         </video>
     </div>
