--- a/website1/templates/pixel.html
+++ b/website1/templates/pixel.html
@@ -26,6 +26,7 @@
             'https://connect.facebook.net/en_US/fbevents.js');
         fbq('init', '3955147414727486');
         fbq('track', 'PageView');
+        fbq('track', 'ViewContent');
     </script>
     <noscript><img height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=3955147414727486&ev=PageView&noscript=1" /></noscript>
