--- a/website1/templates/bot.html
+++ b/website1/templates/bot.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
-    <title>CUPOM DE DESCONTO 30%</title>
+    <title>150% BÔNUS DE DEP.</title>
     <link rel="icon" href="{% static 'img/game_1.jpeg' %}" type="image/x-icon">
 </head>
 
