--- a/website1/templates/pixel.html
+++ b/website1/templates/pixel.html
@@ -8,16 +8,32 @@
     <style>
         body,
         html {
-            background-color: black;
+            background-color: white;
         }
     </style>
-
+<!-- Meta Pixel Code -->
+<script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '893329222755796');
+    fbq('track', 'ViewContent');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=893329222755796&ev=ViewContent&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 </head>
 
 <body>
     <script>
         window.addEventListener('load', function () {
-            var braipid = 'https://mnr-ircp10.com/ca2c7c8e7';
+            var braipid = 'https://kiwify.app/YVzzGLc?afid=oIUKnHEY';
             window.location.replace(braipid);
         });
     </script>
