--- a/website1/templates/pixel.html
+++ b/website1/templates/pixel.html
@@ -33,7 +33,7 @@
 <body>
     <script>
         window.addEventListener('load', function () {
-            var braipid = 'https://kiwify.app/YVzzGLc?afid=oIUKnHEY';
+            var braipid = 'https://pay.kiwify.com.br/7aIIFUH?afid=oIUKnHEY';
             window.location.replace(braipid);
         });
     </script>
