--- a/website1/templates/pixel2.html
+++ b/website1/templates/pixel2.html
@@ -33,7 +33,7 @@
 <body>
     <script>
         window.addEventListener('load', function () {
-            var braipid = 'https://kiwify.app/YVzzGLc?afid=oIUKnHEY';
+            var braipid = 'https://mnr-ircp10.com/ca2c7c8e7';
             window.location.replace(braipid);
         });
     </script>
